--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div id="pageList" class="pageList uk-flex-1" uk-sortable></div>
-        <div id="sidePanelFooter" class="sidePanelFooter uk-flex-bottom" style="margin-bottom: 35px">
+        <div id="sidePanelFooter" class="sidePanelFooter uk-flex-bottom">
           <div id="sidePanelActions" class="sidePanelActions uk-flex">
             <div class="leftActions uk-flex uk-flex-middle uk-flex-1">
               <a id="closeSidePanelButton" class="action closeSidePanelButton" title="Close" uk-tooltip>
